--- a/_config.yml
+++ b/_config.yml
@@ -1,118 +1,67 @@
-# main text of home
+# Site settings
 title: Thymeless Treats Bakery
-bio: Savor the Moments, Taste the Thyme-Thymeless Treats Bakery, Where Every Bite is Timelessly Delicious!
-
-# twitter summary info
-description: Savor the Moments, Taste the Thyme - Thymeless Treats Bakery, Where Every Bite is Timelessly Delicious!
-
-# if it's an external image, update below for true
-# better with square images
-external-image: false
-picture: assets/images/light_profile.jpg
-
-# your site color theme, true for dark theme, 
-# false to light theme, auto to switch with system.
-dark-theme: auto
-
-# If you want to include your resume, set to true
-# and specify source (external or local).
-resume: false
-resume-external: false
-resume-url: https://google.com/?q=my+resume
-
+email: your-email@domain.com
 url: https://btkircher.github.io/
-# your url: https://USERNAME.github.io
+description: "Savor the Moments, Taste the Thyme -- Thymeless Treats Bakery, Where Every Bite is Timelessly Delicious!"
+keywords: "bakery, cleveland"
+skills: "Cupcakes - Cookies - Treats"
+meta_author: Kircher Brian
 
-permalink: /:title/
+# Google webmaster tools
+google_verify:
 
-# To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
+bing_verify:
 
-# if you don't want comments in your posts, leave categories empty
-disqus:
-  shortname: github # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+# Contact form:
+# - static : pass through formspree.io to validate email sending
+# - disqus : replace contact form by disqus thread
+# - comment the line below if you want to stick with the default PHP contact form
+contact: static
 
-# if you don't have any of social below, comment the line
-facebook: 100094256522051
-twitter: mytwitter
-instagram: myinstagram
-linkedin: mylinkedin
-github: mygithub
-email: myemail@gmail.com
+# If you use disqus you need disqus shortname
+# https://help.disqus.com/customer/portal/articles/466208
+disqus_shortname: myshortname
 
-authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
-    external-image: false
-    picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+# Color settings (hex-codes without the leading hash-tag)
+color:
+  primary: 18bc9c #80B3FF
+  primary-rgb: "24,288,156" #"128,179,255"
+  secondary: 2c3e50 #FD6E8A
+  secondary-dark: 233140 #A2122F
 
-# do you want a larger site? change the option below
-# options: [normal, large] | default: normal
-# normal = 560px / large = 810px
-width: normal
+# Footer settings
+footer:
+  copyright: Dr. Henry Jekyll
+  location: Cleveland
+  social: Around the Web
+  credits: Credits
 
-# if you don't need projects, comment the *projects* configs below
-projects: false
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: twitter
+    url: http://twitter.com/jekyllrb
+  - title: facebook
+    url: https://www.facebook.com/profile.php?id=100094256522051
+  - title: stack-overflow
+    url: http://stackoverflow.com/questions/tagged/jekyll
+  - title: bitbucket
+    url: http://bitbucket.org/jekyll
+  - title: github
+    url: http://github.com/jekyll
 
-# if you don't need "about" or "blog", comment them out below
-about: true
-blog: true
-menu: true
+# Postal address (add as many lines as necessary)
+address:
+  - line: North Ridgeville, OH 44039
 
-# do you want to show the "read time" of the posts?
-read-time: true
+# Build settings
+markdown: kramdown
+permalink: pretty
 
-# do you want to show the "tags" inside the posts?
-show-tags: true
-
-# related posts inside a post?
-related: true
-
-# Display links for next and previous posts for the specified categories
-post-advance-links: [blog]
-
-# show author block at the end of a post ?
-show-author: false
-
-# do you want some animations?
-animation: true
-
-# add default values to specific pages or layouts
+#for posts
 defaults:
   - scope:
-      path: "" # an empty string here means all files in the project
-      layout: "post"
+      path: ""
+      type: "posts"
     values:
-      # setting all post to not hidden by default,
-      # can be overridden in the front matter for a specific post
-      hidden: false
-
-plugins:
-  - jekyll-seo-tag
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-
-compress_html:
-  ignore:
-    envs:
-      - development
-      - stage
-
-exclude:
-  [
-    "README.md",
-    "Gemfile",
-    "Gemfile.lock",
-    "FAQ.md",
-    "vendor",
-  ]
+      permalink: ""
