--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 181818 # Dark gray, reminiscent of the background in the logo
+  primary-rgb: "24,24,24"
+  secondary: fffafa # Off-white, echoing the logo's text and design
+  secondary-dark: 8b8b8b # A deeper gray for contrast
 
 # Footer settings
 footer:
