--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,16 @@ contact: static
 disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
+# color:
+#   primary: 181818 # Keeping Dark gray as the primary color
+#   primary-rgb: "24,24,24"
+#   secondary: 8b8b8b # Changing secondary to a deeper gray for better contrast
+#   secondary-dark: 606060 # Slightly lighter than primary but darker than secondary for additional contrast
 color:
-  primary: 181818 # Keeping Dark gray as the primary color
-  primary-rgb: "24,24,24"
-  secondary: 8b8b8b # Changing secondary to a deeper gray for better contrast
-  secondary-dark: 606060 # Slightly lighter than primary but darker than secondary for additional contrast
+  primary: #93A299  # Sage green as the primary color
+  primary-rgb: "147,162,153"
+  secondary: #FFFFF0  # Ivory white as the secondary color
+  secondary-dark: #B0C4B1  # Slightly lighter than primary but still in the sage family for additional contrast
 
 
 # Footer settings
