--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,10 @@ disqus_shortname: myshortname
 #   secondary-dark: 606060 # Slightly lighter than primary but darker than secondary for additional contrast
 
 color:
-  primary: 93A299  # Sage green as the primary color
+  primary: 93A299 # Sage green as the primary color
   primary-rgb: "147,162,153"
-  secondary: B0C4B1 #FFFFF0  # Ivory white as the secondary color
-  secondary-dark: FFFFF0 #B0C4B1  # Slightly lighter than primary but still in the sage family for additional contrast
-
+  secondary: D3D3D3 # Soft gray as the secondary color
+  secondary-dark: A9A9A9 # A slightly darker shade of the soft gray for better contrast
 
 # Footer settings
 footer:
