Reverting back from using logo

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
  # Site settings
 title: Thymeless Treats Bakery
-email: your-email@domain.com
+email: thymelesstreatsbakery@gmail.com
 url: https://btkircher.github.io/
 description: "Savor the Moments, Taste the Thyme -- Thymeless Treats Bakery, Where Every Bite is Timelessly Delicious!"
 keywords: "bakery, cleveland"
