--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
  # Site settings
-title: Thymeless Treats Bakery
+title: Thymeless Treats
 email: thymelesstreatsbakery@gmail.com
 url: https://btkircher.github.io/
 description: "Savor the Moments, Taste the Thyme -- Thymeless Treats Bakery, Where Every Bite is Timelessly Delicious!"
