Added Valentine's page

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navbar-links:
   Menu:
     - Menu: "menu"
     - Christmas Menu: "christmas"
+    - Valentine's Menu: "valentines"
 #  Author's home: "https://deanattali.com"
 
 ################
