--- a/_config.yml
+++ b/_config.yml
@@ -166,7 +166,7 @@ footer-hover-col: "#0085A1"
 #################################
 
 # Fill in your Google Analytics tag ID (or "Measurement ID") to track your website usage
-gtag: "G-T3SQNE03P9" # Replace with your actual GA4 Measurement ID
+gtag: G-9SVD45RN18" # Replace with your actual GA4 Measurement ID
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
