--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ navbar-links:
   #About Me: "about"
   Order: "order"
   Contact Me: "contact"
-  Menu:
-    - Seasonal Menu: "easter"
+  Menu: "menu"
+    # - Seasonal Menu: "mothersday"
 #  Author's home: "https://deanattali.com"
 
 ################
@@ -129,14 +129,14 @@ navbar-var-length: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#355c47"
+navbar-col: "#4A5A4F"
 navbar-text-col: "#FFFFFF"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#355c47"
+footer-col: "#4A5A4F"
 footer-text-col: "#777777"
 footer-link-col: "#FFFFFF"
 footer-hover-col: "#0085A1"
