--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title: Thymeless Treats Bakery
 
 navbar-links:
   #About Me: "about"
-  Order: "order"
+  Order: "thanksgiving"
   Contact Me: "contact"
   Menu: "menu"
     # - Seasonal Menu: "mothersday"
@@ -33,7 +33,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/logo2.jpg"
+avatar: "/assets/img/logo.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
